feat(Repository): 모든 장기 게임 반환 기능 구현